<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#feebda">

    <TextView
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:background="@drawable/display_background"
        android:gravity="center_vertical"
        android:paddingHorizontal="8dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/first"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/display">

        <Button
            android:id="@+id/egg"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="2"
            android:text="@string/egg" />

        <Button
            android:id="@+id/cream"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:text="@string/cream" />

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/clear" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/second"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first">

        <Button
            android:id="@+id/chocolate"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="2"
            android:text="@string/chocolate" />

        <Button
            android:id="@+id/coffee"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:text="@string/coffee" />

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/add" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/third"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/second">

        <Button
            android:id="@+id/banana"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="2"
            android:text="@string/banana" />

        <Button
            android:id="@+id/mango"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:text="@string/mango" />

        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/delete" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/third">

        <Button
            android:id="@+id/oreo"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="2"
            android:text="@string/oreo" />

        <Button
            android:id="@+id/flour"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:text="@string/flour" />

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/calculate"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fifth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forth">

        <Button
            android:id="@+id/marbleCake"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="2"
            android:text="@string/marble_cake" />

        <Button
            android:id="@+id/nutella"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:text="@string/nutella" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/calculate" />
    </LinearLayout>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/app_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fifth" />
</androidx.constraintlayout.widget.ConstraintLayout>